--- a/Createqr.html
+++ b/Createqr.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav>
-        <img src="/img/icon.png" alt="" width="130px">
+        <img src="/img/icon.png" alt="" width="100px">
         <div>
             <h1>ICONnect</h1>
         </div>
@@ -37,19 +37,19 @@
                         <p style="text-align: center;">Franco M. Gregorio</p>
                     </div>
                     <li><a class="btn btn-danger" href="/home.html"><i class="fa fa-home"
-                                style="font-size: 40px;"></i> Home</a></li>
+                                style="font-size: 30px;"></i> Home</a></li>
                     <hr>
                     <li><a class="btn btn-danger active" href="/Createqr.html"><i class="fa fa-qrcode"
-                                style="font-size: 40px;"></i> Create QR</a></li>
+                                style="font-size: 30px;"></i> Create QR</a></li>
                     <hr>
                     <li><a class="btn btn-danger" href="/Section.html"><i class="fa fa-plus-circle"
-                                style="font-size: 40px;"></i> Section</a></li>
+                                style="font-size: 30px;"></i> Section</a></li>
                     <hr>
                     <li><a class="btn btn-danger" href="/enroll.html"><i class="fa fa-user-plus"
-                                style="font-size: 40px;"></i> Enroll</a></li>
+                                style="font-size: 30px;"></i> Enroll</a></li>
                     <hr>
                     <li><a class="btn btn-danger" href="/Settings.html"><i class="fa fa-cog"
-                                style="font-size: 40px;"></i> Settings</a></li>
+                                style="font-size: 30px;"></i> Settings</a></li>
                     <hr>
                     <li><a href="/index.html" class="btn btn-success">logout</a></li>
                     <hr>
@@ -64,7 +64,7 @@
             </div>
             <div class="form">
                <form action="">
-                <div class="name" style="display: flex; gap: 10px; padding: 20px;">
+                <div class="name" style="display: flex; gap: 10px; padding: 20px 20px 0 20px; ">
                     <input type="text" class="form-control mb-3" placeholder="Last Name">
                     <input type="text" class="form-control mb-3" placeholder="First Name">
                     <input type="text" class="form-control mb-3" placeholder="M.I Name">
