--- a/Settings.html
+++ b/Settings.html
@@ -15,10 +15,10 @@
 
 <body>
     <nav>
-        <img src="/img/icon.png" alt="" width="130px">
+        <img src="/img/icon.png" alt="" width="100px">
         <div>
             <h1>ICONnect</h1>
-            <p>QR-Attendance Monitoring System</p>
+           
         </div>
     </nav>
     <div class="main">
@@ -32,28 +32,30 @@
                         <div class="image">
                             <i class="fa fa-user"></i>
                         </div>
-                       <i class="fa fa-camera"></i>
+                        <i class="fa fa-camera"></i>
                     </div>
                     <div class="online"></div>
                     <p style="text-align: center;">Franco M. Gregorio</p>
                 </div>
-                <li><a class="btn btn-danger active" href="/home.html"><i class="fa fa-home" style="font-size: 40px;"></i>  Home</a></li>
+                <li><a class="btn btn-danger" href="/home.html"><i class="fa fa-home"
+                            style="font-size: 30px;"></i> Home</a></li>
                 <hr>
-                <li><a class="btn btn-danger" href="/Createqr.html"><i class="fa fa-qrcode" style="font-size: 40px;"></i> Create QR</a></li>
+                <li><a class="btn btn-danger" href="/Createqr.html"><i class="fa fa-qrcode"
+                            style="font-size: 30px;"></i> Create QR</a></li>
                 <hr>
-                <li><a class="btn btn-danger" href="/Section.html"><i class="fa fa-plus-circle" style="font-size: 40px;"></i> Section</a></li>
+                <li><a class="btn btn-danger" href="/Section.html"><i class="fa fa-plus-circle"
+                            style="font-size: 30px;"></i> Section</a></li>
                 <hr>
-                <li><a class="btn btn-danger" href="/enroll.html"><i class="fa fa-user-plus" style="font-size: 40px;"></i> Enroll</a></li>
+                <li><a class="btn btn-danger" href="/enroll.html"><i class="fa fa-user-plus"
+                            style="font-size: 30px;"></i> Enroll</a></li>
                 <hr>
-                <li><a class="btn btn-danger" href="/Settings.html"><i class="fa fa-cog" style="font-size: 40px;"></i> Settings</a></li>
+                <li><a class="btn btn-danger  active" href="/Settings.html"><i class="fa fa-cog"
+                            style="font-size: 30px;"></i> Settings</a></li>
                 <hr>
                 <li><a href="/index.html" class="btn btn-success">logout</a></li>
                 <hr>
             </ul>
         </div>
-        <!-- <div>
-            <i class="fa fa-bars" aria-hidden="true"></i>
-        </div> -->
        </div>
         <!-- container item -->
         <div class="container">
