--- a/enroll.html
+++ b/enroll.html
@@ -15,49 +15,76 @@
 
 <body>
     <nav>
-        <img src="/img/icon.png" alt="" width="130px">
+        <img src="/img/icon.png" alt="" width="100px">
         <div>
             <h1>ICONnect</h1>
-            <p>QR-Attendance Monitoring System</p>
         </div>
     </nav>
     <div class="main">
         <!--slide bar-->
-       <div  style="display: flex;">
-        <div class="slidebar">
-            <ul>
-                <!-- profile -->
-                <div class="profile">
-                    <div class="img">
-                        <div class="image">
-                            <i class="fa fa-user"></i>
+        <div style="display: flex;">
+            <div class="slidebar">
+                <ul>
+                    <!-- profile -->
+                    <div class="profile">
+                        <div class="img">
+                            <div class="image">
+                                <i class="fa fa-user"></i>
+                            </div>
+                            <i class="fa fa-camera"></i>
                         </div>
-                       <i class="fa fa-camera"></i>
+                        <div class="online"></div>
+                        <p style="text-align: center;">Franco M. Gregorio</p>
                     </div>
-                    <div class="online"></div>
-                    <p style="text-align: center;">Franco M. Gregorio</p>
-                </div>
-                <li><a class="btn btn-danger active" href="/home.html"><i class="fa fa-home" style="font-size: 40px;"></i>  Home</a></li>
-                <hr>
-                <li><a class="btn btn-danger" href="/Createqr.html"><i class="fa fa-qrcode" style="font-size: 40px;"></i> Create QR</a></li>
-                <hr>
-                <li><a class="btn btn-danger" href="/Section.html"><i class="fa fa-plus-circle" style="font-size: 40px;"></i> Section</a></li>
-                <hr>
-                <li><a class="btn btn-danger" href="/enroll.html"><i class="fa fa-user-plus" style="font-size: 40px;"></i> Enroll</a></li>
-                <hr>
-                <li><a class="btn btn-danger" href="/Settings.html"><i class="fa fa-cog" style="font-size: 40px;"></i> Settings</a></li>
-                <hr>
-                <li><a href="/index.html" class="btn btn-success">logout</a></li>
-                <hr>
-            </ul>
+                    <li><a class="btn btn-danger" href="/home.html"><i class="fa fa-home" style="font-size: 30px;"></i>
+                            Home</a></li>
+                    <hr>
+                    <li><a class="btn btn-danger " href="/Createqr.html"><i class="fa fa-qrcode"
+                                style="font-size: 30px;"></i> Create QR</a></li>
+                    <hr>
+                    <li><a class="btn btn-danger" href="/Section.html"><i class="fa fa-plus-circle"
+                                style="font-size: 30px;"></i> Section</a></li>
+                    <hr>
+                    <li><a class="btn btn-danger active" href="/enroll.html"><i class="fa fa-user-plus"
+                                style="font-size: 30px;"></i> Enroll</a></li>
+                    <hr>
+                    <li><a class="btn btn-danger" href="/Settings.html"><i class="fa fa-cog"
+                                style="font-size: 30px;"></i> Settings</a></li>
+                    <hr>
+                    <li><a href="/index.html" class="btn btn-success">logout</a></li>
+                    <hr>
+                </ul>
+            </div>
         </div>
-        <!-- <div>
-            <i class="fa fa-bars" aria-hidden="true"></i>
-        </div> -->
-       </div>
         <!-- container item -->
         <div class="container">
-           
+            <div class="container">
+                <div class="title bg bg-info"
+                    style="padding: 10px 10px 10px 20px; color: rgb(255, 255, 255); margin: 10px 10px 20px 10px; border-radius: 20px 20px 0 0;">
+                    <h1>Enroll</h1>
+                    <strong>QR-Attendance Monitoring System</strong>
+                </div>
+                <div class="form">
+                    <form action="">
+                        <div class="name" style="display: flex; gap: 10px; padding: 20px 20px 0px 20px;">
+                            <input type="text" class="form-control mb-3" placeholder="Last Name">
+                            <input type="text" class="form-control mb-3" placeholder="First Name">
+                            <input type="text" class="form-control mb-3" placeholder="M.I Name">
+                        </div>
+                        <div style="padding: 0px 20px 20px 20px;">
+                            <input type="text" class="form-control mb-3" placeholder="Grade">
+                            <input type="text" class="form-control mb-3" placeholder="Subject">
+                            <select name="" id="" class="form-control mb-3">
+                                <option value="">ICT 12-1 St. Angelo </option>
+                                <option value="">ICT 12-2 St. Bernardine</option>
+                                <option value="">ICT 12-3 St. Guy </option>
+                                <option value="">ICT 12-4 St. Isidore</option>
+                            </select>
+                            <button class="btn btn-success">Enroll</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </body>
