--- a/home.html
+++ b/home.html
@@ -2,167 +2,168 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/defualt.css">
-    <link rel="stylesheet" href="/css/home.css">
-    <script src="/js/navbar.js"></script>
-    <title>ICONnect</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/defualt.css">
+  <link rel="stylesheet" href="/css/home.css">
+  <script src="/js/navbar.js"></script>
+  <title>ICONnect</title>
 </head>
 
 <body>
-    <nav>
-        <img src="/img/icon.png" alt="" width="130px">
-        <div>
-            <h1>ICONnect</h1>
-        </div>
-    </nav>
-    <div class="main">
-        <!--slide bar-->
-        <div style="display: flex;">
-            <div class="slidebar">
-                <ul>
-                    <!-- profile -->
-                    <div class="profile">
-                        <div class="img">
-                            <div class="image">
-                                <i class="fa fa-user"></i>
-                            </div>
-                            <i class="fa fa-camera"></i>
-                        </div>
-                        <div class="online"></div>
-                        <p style="text-align: center;">Franco M. Gregorio</p>
-                    </div>
-                    <li><a class="btn btn-danger active" href="/home.html"><i class="fa fa-home"
-                                style="font-size: 40px;"></i> Home</a></li>
-                    <hr>
-                    <li><a class="btn btn-danger" href="/Createqr.html"><i class="fa fa-qrcode"
-                                style="font-size: 40px;"></i> Create QR</a></li>
-                    <hr>
-                    <li><a class="btn btn-danger" href="/Section.html"><i class="fa fa-plus-circle"
-                                style="font-size: 40px;"></i> Section</a></li>
-                    <hr>
-                    <li><a class="btn btn-danger" href="/enroll.html"><i class="fa fa-user-plus"
-                                style="font-size: 40px;"></i> Enroll</a></li>
-                    <hr>
-                    <li><a class="btn btn-danger" href="/Settings.html"><i class="fa fa-cog"
-                                style="font-size: 40px;"></i> Settings</a></li>
-                    <hr>
-                    <li><a href="/index.html" class="btn btn-success">logout</a></li>
-                    <hr>
-                </ul>
-            </div>
-        </div>
-        <!-- container item -->
-        <div class="container">
-           <div class="title bg bg-info" style="padding: 10px 10px 10px 20px; color: rgb(255, 255, 255); margin: 10px 10px 20px 10px;">
-            <h1>Home</h1>
-            <strong>QR-Attendance Monitoring System</strong>
-           </div>
-            <div class="box">
-                <div class="total alert alert-info" style="display: flex; gap: 10px;">
-                    <i class="fa fa-graduation-cap" style="font-size: 50px; margin-top: 15px;" aria-hidden="true"></i>
-                    <div>
-                        <p><strong>Total of Student</strong>
-                            <br>
-                            Male: 247
-                            <br>
-                            Female: 350
-                        </p>
-                    </div>
-                </div>
-                <div class="total alert alert-info" style="display: flex; gap: 10px;">
-                    <i class="fa fa-user" style="font-size: 50px; margin-top: 15px;" aria-hidden="true"></i>
-                    <div>
-                        <p><strong>Total of Teacher</strong>
-                            <br>
-                            Male: 30
-                            <br>
-                            Female: 40
-                        </p>
-                    </div>
-                </div>
-                <div class="total alert alert-info" style="display: flex; gap: 10px;">
-                    <i class="fa fa-lock" style="font-size: 50px; margin-top: 15px;" aria-hidden="true"></i>
-                    <div>
-                        <p><strong>Total of Admin</strong>
-                            <br>
-                            Male: 12
-                            <br>
-                            Female: 3
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <center>
-                <th >Summary Attendance</th>
-            </center>
-            <div class="table" style="display: flex; justify-content: center; padding: 20px;">
-                <table class="table table-bordered table-primary" style="width: 100%; text-align: center; ">
-                  <thead>
-                    <tr>
-                      <th colspan="2"> <select name="" id="">
-                          <option value="">ICT 12-1 St. Angelo </option>
-                          <option value="">ICT 12-2 St. Bernardine</option>
-                          <option value="">ICT 12-3 St. Guy </option>
-                          <option value="">ICT 12-4 St. Isidore</option>
-                        </select>
-                      </th>
-                      <th colspan="2">
-                        <input type="date">
-                      </th>
-                      <th colspan="2">
-                        <select>
-                          <option value="">1st Semester - Midterm</option>
-                          <option value="">1st Semester - Finals</option>
-                          <option value="">2nd Semester - Midterm</option>
-                          <option value="">2nd Semester - Finals</option>
-                        </select>
-                      </th>
-                    </tr>
-                    <tr>
-                      <th>Gender</th>
-                      <th>Present</th>
-                      <th>Absent</th>
-                      <th>Late</th>
-                      <th>Excuse</th>
-                      <th>Total</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <th >Male</th>
-                      <td>20</td>
-                      <td>1</td>
-                      <td>1</td>
-                      <td>3</td>
-                      <td>25</td>
-                    </tr>
-                    <tr>
-                      <th >Female</th>
-                      <td>20</td>
-                      <td>1</td>
-                      <td>1</td>
-                      <td>3</td>
-                      <td>25</td>
-                    </tr>
-                    <tr>
-                      <th >Total</th>
-                      <td>40</td>
-                      <td>2</td>
-                      <td>2</td>
-                      <td>6</td>
-                      <td>50</td>
-                    </tr>
-                  </tbody>
-                </table>
+  <nav>
+    <img src="/img/icon.png" alt="" width="100px">
+    <div>
+      <h1>ICONnect</h1>
+    </div>
+  </nav>
+  <div class="main">
+    <!--slide bar-->
+    <div style="display: flex;">
+      <div class="slidebar">
+        <ul>
+          <!-- profile -->
+          <div class="profile">
+            <div class="img">
+              <div class="image">
+                <i class="fa fa-user"></i>
               </div>
+              <i class="fa fa-camera"></i>
+            </div>
+            <div class="online"></div>
+            <p style="text-align: center;">Franco M. Gregorio</p>
+          </div>
+          <li><a class="btn btn-danger active" href="/home.html"><i class="fa fa-home" style="font-size: 30px;"></i> Home</a>
+          </li>
+          <hr>
+          <li><a class="btn btn-danger " href="/Createqr.html"><i class="fa fa-qrcode"
+                style="font-size: 30px;"></i> Create QR</a></li>
+          <hr>
+          <li><a class="btn btn-danger" href="/Section.html"><i class="fa fa-plus-circle" style="font-size: 30px;"></i>
+              Section</a></li>
+          <hr>
+          <li><a class="btn btn-danger" href="/enroll.html"><i class="fa fa-user-plus" style="font-size: 30px;"></i>
+              Enroll</a></li>
+          <hr>
+          <li><a class="btn btn-danger" href="/Settings.html"><i class="fa fa-cog" style="font-size: 30px;"></i>
+              Settings</a></li>
+          <hr>
+          <li><a href="/index.html" class="btn btn-success">logout</a></li>
+          <hr>
+        </ul>
+      </div>
+    </div>
+    <!-- container item -->
+    <div class="container">
+      <div class="title bg bg-info"
+        style="padding: 10px 10px 10px 20px; color: rgb(255, 255, 255); margin: 10px 10px 20px 10px;">
+        <h1>Home</h1>
+        <strong>QR-Attendance Monitoring System</strong>
+      </div>
+      <div class="box">
+        <div class="total alert alert-info" style="display: flex; gap: 10px;">
+          <i class="fa fa-graduation-cap" style="font-size: 50px; margin-top: 15px;" aria-hidden="true"></i>
+          <div>
+            <p><strong>Total of Student</strong>
+              <br>
+              Male: 247
+              <br>
+              Female: 350
+            </p>
+          </div>
         </div>
+        <div class="total alert alert-info" style="display: flex; gap: 10px;">
+          <i class="fa fa-user" style="font-size: 50px; margin-top: 15px;" aria-hidden="true"></i>
+          <div>
+            <p><strong>Total of Teacher</strong>
+              <br>
+              Male: 30
+              <br>
+              Female: 40
+            </p>
+          </div>
+        </div>
+        <div class="total alert alert-info" style="display: flex; gap: 10px;">
+          <i class="fa fa-lock" style="font-size: 50px; margin-top: 15px;" aria-hidden="true"></i>
+          <div>
+            <p><strong>Total of Admin</strong>
+              <br>
+              Male: 12
+              <br>
+              Female: 3
+            </p>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <center>
+        <th>Summary Attendance</th>
+      </center>
+      <div class="table" style="display: flex; justify-content: center; padding: 20px;">
+        <table class="table table-bordered table-primary" style="width: 100%; text-align: center; ">
+          <thead>
+            <tr>
+              <th colspan="2"> <select name="" id="">
+                  <option value="">ICT 12-1 St. Angelo </option>
+                  <option value="">ICT 12-2 St. Bernardine</option>
+                  <option value="">ICT 12-3 St. Guy </option>
+                  <option value="">ICT 12-4 St. Isidore</option>
+                </select>
+              </th>
+              <th colspan="2">
+                <input type="date">
+              </th>
+              <th colspan="2">
+                <select>
+                  <option value="">1st Semester - Midterm</option>
+                  <option value="">1st Semester - Finals</option>
+                  <option value="">2nd Semester - Midterm</option>
+                  <option value="">2nd Semester - Finals</option>
+                </select>
+              </th>
+            </tr>
+            <tr>
+              <th>Gender</th>
+              <th>Present</th>
+              <th>Absent</th>
+              <th>Late</th>
+              <th>Excuse</th>
+              <th>Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>Male</th>
+              <td>20</td>
+              <td>1</td>
+              <td>1</td>
+              <td>3</td>
+              <td>25</td>
+            </tr>
+            <tr>
+              <th>Female</th>
+              <td>20</td>
+              <td>1</td>
+              <td>1</td>
+              <td>3</td>
+              <td>25</td>
+            </tr>
+            <tr>
+              <th>Total</th>
+              <td>40</td>
+              <td>2</td>
+              <td>2</td>
+              <td>6</td>
+              <td>50</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 </body>
 
 </html>
