--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/index.css">
-    <title>Smart-QR</title>
+    <title>ICONnect</title>
 </head>
 
 <body>
@@ -38,7 +39,6 @@
                 <br>
                 <div class="button" style="display: flex; justify-content: center;">
                     <a href="/Home.html"><button class="btn btn-primary" style="width: 250px;">Login</button></a>
-
                 </div>
                 <hr>
                 <center><a href="" style="text-align: center;">forgot password</a></center>
