--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <br>
                 <br>
                 <div class="button" style="display: flex; justify-content: center;">
-                    <a href="/Home.html"><button class="btn btn-primary" style="width: 250px;">Login</button></a>
+                    <a href="/home.html"><button class="btn btn-primary" style="width: 250px;">Login</button></a>
                 </div>
                 <hr>
                 <center><a href="" style="text-align: center;">forgot password</a></center>
